Fixed booking id not sent to success

--- a/BJJInParadise.Web/Views/Booking/Index.cshtml
+++ b/BJJInParadise.Web/Views/Booking/Index.cshtml
@@ -145,7 +145,7 @@
 
                             },
                             success: function(response) {
-                                window.location.href = '/Booking/Success/' + response.data.CampId;
+                                window.location.href = '/Booking/Success/' + response.data.BookingId;
                             }
                         });
                     });
