Added forgot password feature

--- a/BJJInParadise.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/BJJInParadise.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,24 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
 }
+@section styles{
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+    <style>
+        #mainNav {
+            background: #000 !important;
+        }
+
+        #forgotPasswordContainer {
+            margin-top: 160px;
+        }
+    </style>
+}<div class="container" id="forgotPasswordContainer">
+    <hgroup class="title">
+        <h1>@ViewBag.Title.</h1>
+    </hgroup>
+    <div>
+        <p>
+            Please check your email to reset your password.
+        </p>
+    </div>
 </div>
-	
