--- a/BJJInParadise.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/BJJInParadise.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,24 @@
 ﻿@{
     ViewBag.Title = "Reset password confirmation";
 }
+@section styles{
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+    <style>
+        #mainNav {
+            background: #000 !important;
+        }
+
+        #forgotPasswordContainer {
+            margin-top: 160px;
+        }
+    </style>
+}<div class="container" id="forgotPasswordContainer">
+    <hgroup class="title">
+        <h1>@ViewBag.Title.</h1>
+    </hgroup>
+    <div>
+        <p>
+            Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        </p>
+    </div>
 </div>
