--- a/BJJInParadise.Web/Views/Account/ForgotPassword.cshtml
+++ b/BJJInParadise.Web/Views/Account/ForgotPassword.cshtml
@@ -2,28 +2,40 @@
 @{
     ViewBag.Title = "Forgot your password?";
 }
+@section styles{
 
-<h2>@ViewBag.Title.</h2>
+    <style>
+        #mainNav {
+            background: #000 !important;
+        }
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="offset-md-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
+        #forgotPasswordContainer {
+            margin-top: 160px;
+        }
+    </style>
 }
+<div class="container" id="forgotPasswordContainer">
+    <h2>@ViewBag.Title.</h2>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <h4>Enter your email.</h4>
+        <hr />
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="offset-md-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Email Link" />
+            </div>
+        </div>
+    }
+</div>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
