Added table to booking detail

--- a/BJJInParadise.Web/Views/Booking/_BookingAccordian.cshtml
+++ b/BJJInParadise.Web/Views/Booking/_BookingAccordian.cshtml
@@ -1,44 +1,42 @@
 ﻿@using System.Web.Mvc.Html
 @model IEnumerable<BjjInParadise.Core.Models.Booking>
-@{ var count = 0;}
-<div class="col-xs-12 col-md-6">
-    <div id="accordion">
-        @foreach (var item in Model)
-        {
 
-            <div class="card">
-                <div class="card-header" id="headingOne">
+<div class="table-responsive">
 
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapse@(count)" aria-expanded="true" aria-controls="collapse@(count)">
-                            @item.Camp.CampName - @item.User.LastName, @item.User.FirstName
-                        </button>
-                    </h5>
-                </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">@Html.DisplayNameFor(x => x.User.FirstName)</th>
+                    <th scope="col">@Html.DisplayNameFor(x => x.User.LastName)</th>
+                    <th scope="col">@Html.DisplayNameFor(x => x.AmountPaid)</th>
+                    <th scope="col">@Html.DisplayNameFor(x => x.Camp.StartDate)</th>
+                    <th scope="col">@Html.DisplayNameFor(x => x.Camp.CampName)</th>
+                    <th scope="col">@Html.DisplayNameFor(x => x.CreatedDate)</th>
+                    <th scope="col">@Html.DisplayNameFor(x => x.ModifiedDate)</th>
+                  </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <th scope="row">@Html.DisplayFor(x => item.User.FirstName)</th>
+                    <th scope="row">@Html.DisplayFor(x => item.User.LastName)</th>
 
-                <div id="collapse@(count)" class="collapse" aria-labelledby="heading + @(count)" data-parent="#accordion">
-                    <div class="card-body">
+                    <td>@Html.DisplayFor(x => item.AmountPaid)</td>
 
+                    <td> @Html.DisplayFor(x => item.Camp.StartDate)</td>
 
+                    <td> @Html.DisplayFor(x => item.Camp.CampName)</td>
 
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => x.AmountPaid): @Html.DisplayFor(x => item.AmountPaid)</div>
+                    <td> @Html.DisplayFor(x => item.Camp.CreatedDate)</td>
+                    <td>@Html.DisplayFor(x => item.ModifiedDate)</td>
 
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => x.Camp.StartDate): @Html.DisplayFor(x => item.Camp.StartDate)</div>
+               
 
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => x.Camp.EndDate): @Html.DisplayFor(x => item.Camp.EndDate)</div>
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => x.CreatedDate): @Html.DisplayFor(x => item.CreatedDate)</div>
-
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => x.ModifiedDate): @Html.DisplayFor(x => item.ModifiedDate)</div>
-
-                        <div class="col-xs-3">@Html.DisplayNameFor(x => x.Camp.IsActive): @Html.DisplayFor(x => item.Camp.IsActive)</div>
-
-
-
-                    </div>
-                </div>
-                @{ count++;}
-            </div>
-
-        }
-    </div>
+                </tr>
+                }
+                </tbody>
+        </table>
+    
+  
 </div>
