--- a/BJJInParadise.Web/Views/CampRoomOption/Edit.cshtml
+++ b/BJJInParadise.Web/Views/CampRoomOption/Edit.cshtml
@@ -48,7 +48,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.CostPerPerson, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.CostPerPerson, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBoxFor(model => model.CostPerPerson, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.CostPerPerson, "", new { @class = "text-danger" })
                 </div>
             </div>
